# pixelskies

./: CMakeLists.txt  MainWindow.qml  README.md  main-cli.cpp  main-gui.cpp
.github/workflows/: c-cpp.yml
src/: main.cpp
src/api/: CMakeLists.txt  bluesky.cpp  bluesky.h
src/utils/: utils.h
ui/: BlueskyButton.qml  BlueskyTextInput.qml  CMakeLists.txt
ui/components/: BlueskyButton.qml  BlueskyIconButton.qml  BlueskySidebar.qml  BlueskyTextInput.qml
ui/cpp/: PixelSkiesGuiController.cpp  PixelSkiesGuiController.h
ui/screens/: HomePage.qml  LoginPage.qml  MainWindow.qml
